--- a/src/components/index.styl
+++ b/src/components/index.styl
@@ -1,3 +1,5 @@
 @import "footer/footer.styl"
 @import "header/header.styl"
 @import "lecture_preview/lecture_preview.styl"
+@import "start-slide-1/start-slide-1.styl"
+@import "start-slide-2/start-slide-2.styl"
