--- a/src/fonts.styl
+++ b/src/fonts.styl
@@ -8,3 +8,15 @@
   src url(/fonts/Amatic_SC/AmaticSC-Regular.ttf)
   font-weight normal
   font-style normal
+
+@font-face
+  font-family "Arial"
+  src url(/fonts/Arial/arial.ttf)
+  font-weight normal
+  font-style normal
+  
+ @font-face
+  font-family "Arial"
+  src url(/fonts/Arial/ariali.ttf)
+  font-weight normal
+  font-style italic
