--- a/src/pages/page.styl
+++ b/src/pages/page.styl
@@ -1,3 +1,37 @@
-h1
-  color #ccc
-  font-family 'Amatic SC'
+/*Reset стилей*/
+*
+	padding 0
+	margin 0
+	box-sizing border-box
+	
+ul,
+ol
+	list-style none
+	
+a
+	text-decoration none
+	color inherit
+
+button,
+input,
+textarea
+	border none
+	outline none
+	background transparent
+	
+/*Общие стили*/
+html
+	font-family "Arial", sans-serif
+	font-size 16px
+	line-height 1.25
+	
+.wrapper
+	margin 0 auto
+	width 100%
+	max-width 1600px
+	
+.container
+	width 100%
+	max-width 1210px
+	padding 0 20px
+	margin 0 auto
