--- a/src/pages/page.pug
+++ b/src/pages/page.pug
@@ -2,13 +2,14 @@ include ./../components/index.pug
 
 doctype html
 html.ua(lang="ru")
-  head
-    meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no')
+	head
+		meta(charset='utf-8')
+		meta(http-equiv='X-UA-Compatible', content='IE=edge')
+		meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no')
 
-  body
-    +header
-    h1(align="center") Роберт Бернс
-    +lecture_preview
-    +footer
+	body
+		+header
+		div.wrapper
+			+start-slide-1
+			+start-slide-2
+		+footer
