--- a/src/components/start-slide-1/start-slide-1.pug
+++ b/src/components/start-slide-1/start-slide-1.pug
@@ -3,7 +3,7 @@ mixin start-slide-1
         div.start-slide-1__header
             div.start-slide-1__logos
                 img.start-slide-1__logos_postnauka(src="/images/postnauka.png")
-                img.start-slide-1__logos_bc(src="images/british-council.png")
+                img.start-slide-1__logos_bc(src="/images/british-council.png")
             a.start-slide-1__nav-link(href="#")
                 span.start-slide-1__nav-link_text Все встречи
                 span.start-slide-1__nav-link_circle
