--- a/src/components/start-slide-2/start-slide-2.pug
+++ b/src/components/start-slide-2/start-slide-2.pug
@@ -1,15 +1,17 @@
 mixin start-slide-2
     div.start-slide-2
-        div.start-slide-1__header
-            div.start-slide-1__logos
-                img.start-slide-1__logos_postnauka(src="/images/postnauka.png")
-                img.start-slide-1__logos_bc(src="images/british-council.png")
-            a.start-slide-1__nav-link(href="#")
-                span.start-slide-1__nav-link_text Все встречи
-                span.start-slide-1__nav-link_circle
-        div.container.start-slide-1__container
-            div.start-slide-1__text-block
-                h1.start-slide-1__title Капица — Резерфорд
-                p.start-slide-1__description 150 лет российской науки в Великобритании и британской науки в России 
-                    span.start-slide-1__description_cursive Проект об отношениях российской и британской науки через встречи ученых
-                a.start-slide-1__read-more(href="#") Читать
+        div.container.start-slide-2__container
+            div.start-slide-2__text-block
+                p.start-slide-2__text Тимирязев вдохновляется теорией эволюции Дарвина, Клиффорд – геометрией Лобачевского, Капица 13 лет работает в лаборатории Резерфорда в Кембридже. 
+                    span.start-slide-2__text_cursive История науки – это история встреч. 
+                    span Российские и британские ученые учились друг у друга, проводили совместные исследования, спорили и конкурировали. Некоторые встречи стали поворотными моментами в научной судьбе российских и британских ученых, а иногда – и в истории развития мировой науки.
+                p.start-slide-2__text Не всегда это встречи в буквальном смысле – порой это прочитанная книга, услышанная лекция, заочное знакомство, научная переписка.<br/>Для совместного проекта 
+                    span.start-slide-2__text_cursive Постнауки и Британского Совета 
+                    span мы собрали 15 сюжетов о судьбоносных встречах российских и британских ученых за последние 150 лет.
+                div.start-slide-2__share
+                    span.start-slide-2__share-text Расскажите друзьям
+                    div.start-slide-2__share-links
+                        a.start-slide-2__share-links_vk(href="#")
+                        a.start-slide-2__share-links_fb(href="#")
+                        a.start-slide-2__share-links_ok(href="#")
+                        a.start-slide-2__share-links_tw(href="#")
