--- a/src/components/start-slide-2/start-slide-2.styl
+++ b/src/components/start-slide-2/start-slide-2.styl
@@ -1,95 +1,83 @@
 .start-slide-2
 	height 100vh
-	min-height 630px
-	background url("/images/start-slide-1_bg.png") right top no-repeat
-	background-size cover
+	min-height 472px
+	background #000
 	color #fff
-	&__header
-		display flex
-		justify-content space-between
-		align-items center
-		padding 36px 36px 0
-	&__logos
-		position relative
-		display flex
-		align-items center
-		&::before
-			content ""
-			position absolute
-			left 62px
-			top 0
-			width 1px
-			height 40px
-			background rgba(255,255,255,.5)
-		&_postnauka
-			display inline-block
-			margin-right 43px
-			height 40px
-		&_bc
-			position relative
-			top 1px
-			height 32px
-	&__nav-link
-		display flex
-		align-items center
-		width 115px
-		&_text
-			width 59px
-			margin-right 16px
-			font-weight 1rem
-			text-align right
-		&_circle
-			display block
-			position relative
-			width 40px
-			height 40px
-			border-radius 50%
-			background #fff
-			&::before,
-			&::after
-				display inline-block
-				position absolute
-				top 50%
-				left 50%
-				transform translate(-50%, -50%)
-				content ""
-				background #000
-			&::before
-				width 14px
-				height 1px
-			&::after
-				width 1px
-				height 14px
 	&__container
 		height 100%
-	&__text-block
-		height calc(100% - 80px)
-		max-width 680px
 		display flex
 		flex-direction column
-		justify-content space-around
-		padding-bottom 40px
-	&__title
-		margin-top 68px
-		margin-bottom 20px
-		font-size 5rem
-		line-height 1
-		font-weight normal
-	&__description
-		margin-bottom 108px
-		font-size 2rem
-		line-height 1.5
+		justify-content center
+	&__text-block
+		column-count 2
+		column-gap 60px
+	&__text
+		font-size 1.5rem
+		line-height 1.5		
+		&:first-child
+			max-width 500px
+		&:nth-last-child(2)
+			padding-top 15px
+			position relative
+			&::after
+				content ""
+				position absolute
+				width 16px
+				height 16px
+				right 40px
+				bottom -16px
+				background url("/images/postnauka.png") center center no-repeat
+				background-size 100%
 		&_cursive
 			font-style italic
+	&__share
+		margin-top 78px
+		&-text
+			display block
+			margin-bottom 8px
+			font-size 1.25rem
 			color rgba(255,255,255,.6)
-	&__read-more
-		font-size 1rem
-		&::after
-			position relative
-			top 2px
-			display inline-block
-			margin-left 7px
-			content ""
-			width 11px
-			height 14px
-			background url("/images/start-slide-sprite.png") -92px -41px no-repeat
+		&-links
+			display flex
+			width 164px
+			justify-content space-between
+			align-items center
+			> a
+				width 32px
+				height 32px
+				border-radius 9px
+				position relative
+				display block
+				&::after
+					display inline-block
+					content ""
+					position absolute
+					top 50%
+					left 50%
+					transform translate(-50%, -50%)
+					background-image url("/images/start-slide-sprite.png")
+					background-repeat no-repeat
+			&_vk
+				background #517398
+				&::after
+					width 22px
+					height 14px
+					background-position -50px -10px
+			&_fb
+				background #4469B0
+				&::after
+					width 14px
+					height 24px
+					background-position -10px -48px
+			&_ok
+				background #EC8225
+				&::after
+					width 13px
+					height 20px
+					background-position -50px -44px
+			&_tw
+				background #2AA3EF
+				&::after
+					width 20px
+					height 18px
+					background-position -10px -10px
