--- a/src/components/index.styl
+++ b/src/components/index.styl
@@ -3,3 +3,4 @@
 @import "lecture_preview/lecture_preview.styl"
 @import "start-slide-1/start-slide-1.styl"
 @import "start-slide-2/start-slide-2.styl"
+@import "menu/menu.styl"
