--- a/src/components/start-slide-2/start-slide-2.pug
+++ b/src/components/start-slide-2/start-slide-2.pug
@@ -2,7 +2,9 @@ mixin start-slide-2
     div.start-slide-2
         div.container.start-slide-2__container
             div.start-slide-2__text-block
-                p.start-slide-2__text Тимирязев вдохновляется теорией эволюции Дарвина, Клиффорд – геометрией Лобачевского, Капица 13 лет работает в лаборатории Резерфорда в Кембридже. 
+                p.start-slide-2__text
+                    span.start-slide-2__text_first-letter Т
+                    span имирязев вдохновляется теорией эволюции Дарвина, Клиффорд – геометрией Лобачевского, Капица 13 лет работает в лаборатории Резерфорда в Кембридже. 
                     span.start-slide-2__text_cursive История науки – это история встреч. 
                     span Российские и британские ученые учились друг у друга, проводили совместные исследования, спорили и конкурировали. Некоторые встречи стали поворотными моментами в научной судьбе российских и британских ученых, а иногда – и в истории развития мировой науки.
                 p.start-slide-2__text Не всегда это встречи в буквальном смысле – порой это прочитанная книга, услышанная лекция, заочное знакомство, научная переписка.<br/>Для совместного проекта 
