--- a/src/components/start-slide-2/start-slide-2.styl
+++ b/src/components/start-slide-2/start-slide-2.styl
@@ -1,7 +1,7 @@
 .start-slide-2
 	height 100vh
 	min-height 472px
-	background #000
+	background #010101
 	color #fff
 	&__container
 		height 100%
@@ -28,6 +28,15 @@
 				bottom -16px
 				background url("/images/postnauka.png") center center no-repeat
 				background-size 100%
+		&_first-letter
+			float left
+			display block
+			margin-bottom -15px
+			margin-right 18px
+			position relative
+			top -8px
+			font-size 4.375rem
+			line-height 1.17
 		&_cursive
 			font-style italic
 	&__share
