--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -3,3 +3,4 @@ include footer/footer.pug
 include lecture_preview/lecture_preview.pug
 include start-slide-1/start-slide-1.pug
 include start-slide-2/start-slide-2.pug
+include menu/menu.pug
