--- a/src/fonts.styl
+++ b/src/fonts.styl
@@ -20,3 +20,9 @@
   src url(/fonts/Arial/ariali.ttf)
   font-weight normal
   font-style italic
+  
+@font-face
+  font-family "Arial"
+  src url(/fonts/Arial/arialbd.ttf)
+  font-weight bold
+  font-style normal
