--- a/src/components/index.styl
+++ b/src/components/index.styl
@@ -4,3 +4,4 @@
 @import "start-slide-1/start-slide-1.styl"
 @import "start-slide-2/start-slide-2.styl"
 @import "menu/menu.styl"
+@import "popup-photos/popup-photos.styl"
