html-разметка fake

--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -5,3 +5,4 @@ include start-slide-1/start-slide-1.pug
 include start-slide-2/start-slide-2.pug
 include menu/menu.pug
 include popup-photos/popup-photos.pug
+include fake/fake.pug
