--- a/src/components/index.styl
+++ b/src/components/index.styl
@@ -5,3 +5,4 @@
 @import "start-slide-2/start-slide-2.styl"
 @import "menu/menu.styl"
 @import "popup-photos/popup-photos.styl"
+@import "fake/fake.styl"
