fake: стили для event

--- a/src/components/fake/fake.pug
+++ b/src/components/fake/fake.pug
@@ -13,8 +13,8 @@ mixin fake
 						span Выходит «Происхождение видов» Чарльза Дарвина
 					div.fake__event-img
 						img(src="/images/Darvin-Timiryazev/the_origin_of_species.png")
-					p.fake__text 24 ноября 1859 года в лондонском издательстве Джона Мюррея выходит тиражом 1250 экземпляров книга Чарльза Дарвина 
-						span.fake__text_cursive «Происхождение видов путем естественного отбора, или Сохранение благоприятных рас в борьбе за жизнь». 
+					p.fake__event-text 24 ноября 1859 года в лондонском издательстве Джона Мюррея выходит тиражом 1250 экземпляров книга Чарльза Дарвина 
+						span.fake__event-text_cursive «Происхождение видов путем естественного отбора, или Сохранение благоприятных рас в борьбе за жизнь». 
 						span Весь тираж был раскуплен в первый же день.
 				div.fake__video
 					span.fake__video-category Видеолекция
@@ -48,12 +48,12 @@ mixin fake
 					h2.fake__event-title
 						span.fake__event-title_date 1864
 						span Тимирязев публикует 3 статьи под общим названием «Книга Дарвина, ее критики и комментаторы»
-					p.fake__text Климент Тимирязев был еще студентом, когда опубликовал в журнале 
-						span.fake__text_cursive «Отечественные записки» 
+					p.fake__event-text Климент Тимирязев был еще студентом, когда опубликовал в журнале 
+						span.fake__event-text_cursive «Отечественные записки» 
 						span три статьи, озаглавленные 
-						span.fake__text_cursive «Книга Дарвина, ее критики и комментаторы». 
+						span.fake__event-text_cursive «Книга Дарвина, ее критики и комментаторы». 
 						span Первое отдельное издание этих статей вышло в 1865 году под названием 
-						span.fake__text_cursive «Краткий очерк теории Дарвина».
+						span.fake__event-text_cursive «Краткий очерк теории Дарвина».
 				div.fake__memory
 					p.fake__memory-author
 						span.fake__memory-author-img
