--- a/src/components/popup-photos/popup-photos.styl
+++ b/src/components/popup-photos/popup-photos.styl
@@ -39,6 +39,7 @@
 				height 19px
 				transform translate(-50%, -50%) rotate(-45deg)
 	&__slider
+		/*временный стиль scroll, при добавлении js к слайдеру, этот стиль можно удалить*/
 		overflow-x scroll
 		&-track
 			padding 44px 470px 140px
