--- a/src/components/start-slide-1/start-slide-1.styl
+++ b/src/components/start-slide-1/start-slide-1.styl
@@ -36,7 +36,7 @@
 		&_text
 			width 59px
 			margin-right 16px
-			font-weight 1rem
+			font-size 1rem
 			text-align right
 		&_circle
 			display block
