fake: стили для video

--- a/src/components/fake/fake.pug
+++ b/src/components/fake/fake.pug
@@ -20,12 +20,13 @@ mixin fake
 					span.fake__video-category Видеолекция
 					h2.fake__video-title Идеи Дарвина и дарвинизм 
 						span.fake__video-title_author Архат Абжанов
-					div.fake__video-iframe
+					div.fake__video-iframe(style="background-image: url('/images/Darvin-Timiryazev/video_1.png')")
 						div.fake__video-iframe-logos
-							img.fake__video-iframe-logos_postnauka(src="/images/postnauka.png")
-							img.fake__video-iframe-logos_bc(src="/images/british-council.png")
+							img.fake__video-iframe-logos_postnauka(src="/images/Darvin-Timiryazev/logo_1.png")
+							img.fake__video-iframe-logos_bc(src="/images/bc-logo-white.png")
 						p.fake__video-iframe-title Идеи Дарвина<br/>и дарвинизм
 						p.fake__video-iframe-author Архат Абжанов
+						a.fake__video-iframe-btn(href="#")
 					div.fake__video-bottom
 						a.fake__video-bottom-share(href="#") Отправьте видео другу
 						a.fake__video-bottom-text(href="#") Текстовая расшифровка
@@ -63,12 +64,13 @@ mixin fake
 					span.fake__video-category Видеолекция
 					h2.fake__video-title Идеи Чарльза Дарвина в России 
 						span.fake__video-title_author Саймон Уэрретт
-					div.fake__video-iframe
+					div.fake__video-iframe(style="background-image: url('/images/Darvin-Timiryazev/video_2.png')")
 						div.fake__video-iframe-logos
-							img.fake__video-iframe-logos_postnauka(src="/images/postnauka.png")
-							img.fake__video-iframe-logos_bc(src="/images/british-council.png")
+							img.fake__video-iframe-logos_postnauka(src="/images/Darvin-Timiryazev/logo_1.png")
+							img.fake__video-iframe-logos_bc(src="/images/bc-logo-white.png")
 						p.fake__video-iframe-title Идеи Чарльза <br/>Дарвина в России
 						p.fake__video-iframe-author Саймон Уэрретт
+						a.fake__video-iframe-btn(href="#")
 					div.fake__video-bottom
 						a.fake__video-bottom-share(href="#") Отправьте видео другу
 						a.fake__video-bottom-text(href="#") Текстовая расшифровка
