--- a/src/fonts.styl
+++ b/src/fonts.styl
@@ -11,7 +11,7 @@
 
 @font-face
   font-family "Arial"
-  src url(/fonts/Arial/arial.ttf)
+  src url(/fonts/Arial/regular.ttf)
   font-weight normal
   font-style normal
   
@@ -23,6 +23,6 @@
   
 @font-face
   font-family "Arial"
-  src url(/fonts/Arial/arialbd.ttf)
+  src url(/fonts/Arial/bold.ttf)
   font-weight bold
   font-style normal
