--- a/src/components/fake/fake.styl
+++ b/src/components/fake/fake.styl
@@ -73,7 +73,107 @@
 			line-height 1.5
 			&_cursive
 				font-style italic
-		
-		
-
-
+	&__video
+		margin-bottom 80px
+		padding-top 28px
+		background #FFFFFF
+		border-radius 4px
+		box-shadow 0 4px 6px rgba(0, 0, 0, 0.05)
+		&-category
+			display inline-block
+			margin-bottom 6px
+			padding-left 36px
+			letter-spacing 2px
+			font-size .75rem
+			color rgba(0,0,0,.6)
+			line-height 1.33
+			text-transform uppercase
+		&-title
+			margin-bottom 24px
+			padding-left 36px
+			font-size 1.5rem
+			line-height 1.33
+			font-weight normal
+			&_author
+				color rgba(0,0,0,.6)
+		&-iframe
+			position relative
+			height 434px
+			padding 36px 36px 40px
+			background-size 100%
+			background-position center center
+			background-repeat no-repeat
+			&-logos
+				margin-bottom 147px
+				position relative
+				width 310px
+				height 65px
+				display flex
+				justify-content space-between
+				align-items center
+				&::after
+					content ""
+					width 1px
+					height 65px
+					position absolute
+					top 0
+					left 101px
+					background rgba(255,255,255,.5)
+				&_postnauka
+					height 65px
+				&_bc
+					height 51px
+			&-title
+				margin-bottom 26px
+				font-size 2.5rem
+				line-height 1
+				color #fff
+			&-author
+				margin-bottom 26px
+				font-size 2.5rem
+				line-height 1
+				color #fff
+				font-style italic
+			&-btn
+				display block
+				position absolute
+				left 50%
+				top 50%
+				transform translate(-50%, -50%)
+				width 73px
+				height 50px
+				background url("/images/youtube-play.svg") center center no-repeat
+		&-bottom
+			display flex
+			justify-content space-between
+			align-items center
+			padding 16px 36px
+			&-share
+				color rgba(0, 0, 0, 0.6)
+				font-size 1rem
+				text-decoration none
+				line-height 1.5
+				&::before
+					margin-right 8px
+					content ""
+					position relative
+					display inline-block
+					width 16px
+					height 14px
+					top 1px
+					background url("/images/video-sprite.png") -10px -10px no-repeat
+			&-text
+				color rgba(0, 0, 0, 0.6)
+				font-size 1rem
+				text-decoration none
+				line-height 1.5
+				&::before
+					margin-right 17px
+					content ""
+					position relative
+					display inline-block
+					width 10px
+					height 10px
+					top -1px
+					background url("/images/video-sprite.png") -46px -10px no-repeat
+					
