fake: стили для gallery

--- a/src/components/fake/fake.pug
+++ b/src/components/fake/fake.pug
@@ -38,7 +38,7 @@ mixin fake
 				img(src="/images/Darvin-Timiryazev/slides/4.png")
 				img(src="/images/Darvin-Timiryazev/slides/5.png")
 				img(src="/images/Darvin-Timiryazev/slides/6.png")
-			div.container.fake__container
+			div.fake__events
 				span.fake__gallery-category 12 фотографий
 				p.fake__gallery-title Встреча и переписка Капицы и Резерфорда
 				p.fake__gallery-description Описание, если надо — пожалуйста. С переводом, блэкджеком и прочими полезными вещами.
