Обновлен под макет компонент main

--- a/src/components/index.styl
+++ b/src/components/index.styl
@@ -1,8 +1,8 @@
 @import "footer/footer.styl"
 @import "header/header.styl"
 @import "lecture_preview/lecture_preview.styl"
-@import "start-slide-1/start-slide-1.styl"
-@import "start-slide-2/start-slide-2.styl"
+@import "main/main.styl"
+/*@import "start-slide-2/start-slide-2.styl"
 @import "menu/menu.styl"
 @import "popup-photos/popup-photos.styl"
-@import "fake/fake.styl"
+@import "fake/fake.styl"*/
