--- a/src/components/main/component.pug
+++ b/src/components/main/component.pug
@@ -1,7 +1,7 @@
 //Этот фаил используется для сборки компонента в Webpack
 
 //Подключить фаил с миксином
-include start-slide-1.pug
+include main.pug
 
 //Вызовите его
-+start-slide-1
++main
