--- a/src/fonts.styl
+++ b/src/fonts.styl
@@ -9,20 +9,36 @@
   font-weight normal
   font-style normal
 
+//Cisco Sans
 @font-face
-  font-family "Arial"
-  src url(/fonts/Arial/regular.ttf)
+  font-family "Cisco Sans"
+  src url(/fonts/CiscoSans/CiscoSans.otf)
   font-weight normal
   font-style normal
   
- @font-face
-  font-family "Arial"
-  src url(/fonts/Arial/ariali.ttf)
+@font-face
+  font-family "Cisco Sans"
+  src url(/fonts/CiscoSans/CiscoSans-Bold.otf)
+  font-weight bold
+  font-style normal
+  
+//SangBleu Sunrise
+@font-face
+  font-family "SangBleu Sunrise"
+  src url(/fonts/SangBleu-Sunrise/SangBleuSunrise-Regular-WebXL.otf)
   font-weight normal
-  font-style italic
+  font-style normal
   
 @font-face
-  font-family "Arial"
-  src url(/fonts/Arial/bold.ttf)
-  font-weight bold
+  font-family "SangBleu Sunrise"
+  src url(/fonts/SangBleu-Sunrise/SangBleuSunrise-RegularItalic-WebXL.otf)
+  font-weight normal
+  font-style italic
+
+//Helios
+//900 - Black
+@font-face
+  font-family "Helios"
+  src url(/fonts/Helios/heliosextblackc.otf)
+  font-weight 900
   font-style normal
