--- a/src/pages/page.pug
+++ b/src/pages/page.pug
@@ -10,9 +10,5 @@ html.ua(lang="ru")
 	body
 		+header
 		div.wrapper
-			+start-slide-1
-			+start-slide-2
-			+menu
-			+popup-photos
-			+fake
+			+main
 		+footer
