--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -1,8 +1,8 @@
 include header/header.pug
 include footer/footer.pug
 include lecture_preview/lecture_preview.pug
-include start-slide-1/start-slide-1.pug
-include start-slide-2/start-slide-2.pug
-include menu/menu.pug
-include popup-photos/popup-photos.pug
-include fake/fake.pug
+include main/main.pug
+//- include start-slide-2/start-slide-2.pug
+//- include menu/menu.pug
+//- include popup-photos/popup-photos.pug
+//- include fake/fake.pug
