--- a/src/components/index.styl
+++ b/src/components/index.styl
@@ -2,7 +2,7 @@
 @import "header/header.styl"
 @import "lecture_preview/lecture_preview.styl"
 @import "main/main.styl"
-/*@import "start-slide-2/start-slide-2.styl"
-@import "menu/menu.styl"
+@import "description/description.styl"
+/*@import "menu/menu.styl"
 @import "popup-photos/popup-photos.styl"
 @import "fake/fake.styl"*/
