--- a/src/components/main/main.styl
+++ b/src/components/main/main.styl
@@ -83,6 +83,7 @@
 	&__description
 		font-size 2rem
 		line-height 1.5
+		letter-spacing 1px
 		&_cursive
 			font-family "SangBleu Sunrise"
 			font-style italic
