--- a/src/fonts.styl
+++ b/src/fonts.styl
@@ -8,6 +8,7 @@
   src url(/fonts/Amatic_SC/AmaticSC-Regular.ttf)
   font-weight normal
   font-style normal
+  
 
 //Cisco Sans
 @font-face
@@ -21,6 +22,14 @@
   src url(/fonts/CiscoSans/CiscoSans-Bold.otf)
   font-weight bold
   font-style normal
+
+//900 - Heavy
+@font-face
+  font-family "Cisco Sans"
+  src url(/fonts/CiscoSans/CiscoSansHeavy.otf)
+  font-weight 900
+  font-style normal
+  
   
 //SangBleu Sunrise
 @font-face
@@ -34,6 +43,7 @@
   src url(/fonts/SangBleu-Sunrise/SangBleuSunrise-RegularItalic-WebXL.otf)
   font-weight normal
   font-style italic
+  
 
 //Helios
 //900 - Black
