--- a/src/components/description/component.pug
+++ b/src/components/description/component.pug
@@ -1,7 +1,7 @@
 //Этот фаил используется для сборки компонента в Webpack
 
 //Подключить фаил с миксином
-include start-slide-2.pug
+include description.pug
 
 //Вызовите его
-+start-slide-2
++description
