--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -2,7 +2,7 @@ include header/header.pug
 include footer/footer.pug
 include lecture_preview/lecture_preview.pug
 include main/main.pug
-//- include start-slide-2/start-slide-2.pug
+include description/description.pug
 //- include menu/menu.pug
 //- include popup-photos/popup-photos.pug
 //- include fake/fake.pug
