--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -3,6 +3,7 @@ include footer/footer.pug
 include lecture_preview/lecture_preview.pug
 include main/main.pug
 include description/description.pug
+include event/event.pug
 //- include menu/menu.pug
 //- include popup-photos/popup-photos.pug
-//- include fake/fake.pug
+//- 
