--- a/src/fonts.styl
+++ b/src/fonts.styl
@@ -46,6 +46,12 @@
   
 
 //Helios
+@font-face
+  font-family "Helios"
+  src url(/fonts/Helios/heliosextc.otf)
+  font-weight normal
+  font-style normal
+  
 //900 - Black
 @font-face
   font-family "Helios"
