--- a/src/pages/page.pug
+++ b/src/pages/page.pug
@@ -12,4 +12,12 @@ html.ua(lang="ru")
 		div.wrapper
 			+main
 			+description
+			div.content
+				a.content__nav-link(href="#")
+					span.content__nav-link_text Все<br/>встречи
+					span.content__nav-link_circle
+				div.container.content__container
+					h1.content__title Лобачевский и<br/>Клиффорд
+					div.events
+						+event
 		+footer
