--- a/src/components/event/component.pug
+++ b/src/components/event/component.pug
@@ -1,7 +1,7 @@
 //Этот фаил используется для сборки компонента в Webpack
 
 //Подключить фаил с миксином
-include fake.pug
+include event.pug
 
 //Вызовите его
-+fake
++event
