--- a/src/components/index.styl
+++ b/src/components/index.styl
@@ -3,6 +3,7 @@
 @import "lecture_preview/lecture_preview.styl"
 @import "main/main.styl"
 @import "description/description.styl"
+@import "event/event.styl"
 /*@import "menu/menu.styl"
 @import "popup-photos/popup-photos.styl"
-@import "fake/fake.styl"*/
+*/
