--- a/src/components/main/main.styl
+++ b/src/components/main/main.styl
@@ -1,4 +1,5 @@
 .main
+	position relative
 	height 100vh
 	min-height 650px
 	background url("/images/main_bg.png") right top no-repeat
@@ -31,7 +32,7 @@
 			top 1px
 			height 32px
 	&__nav-link
-		position fixed
+		position absolute
 		top 36px
 		right 36px
 		display flex
