--- a/src/fonts.styl
+++ b/src/fonts.styl
@@ -58,3 +58,12 @@
   src url(/fonts/Helios/heliosextblackc.otf)
   font-weight 900
   font-style normal
+
+
+//Druk Text Wide
+//super - 900
+@font-face
+  font-family "Druk Text Wide"
+  src url(/fonts/DrukTextWide/DrukTextWide-Super.otf)
+  font-weight 900
+  font-style normal
