--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -4,6 +4,4 @@ include lecture_preview/lecture_preview.pug
 include main/main.pug
 include description/description.pug
 include event/event.pug
-//- include menu/menu.pug
-//- include popup-photos/popup-photos.pug
-//- 
+include video/video.pug
