--- a/src/components/index.styl
+++ b/src/components/index.styl
@@ -4,6 +4,4 @@
 @import "main/main.styl"
 @import "description/description.styl"
 @import "event/event.styl"
-/*@import "menu/menu.styl"
-@import "popup-photos/popup-photos.styl"
-*/
+@import "video/video.styl"
