--- a/src/components/index.styl
+++ b/src/components/index.styl
@@ -5,3 +5,5 @@
 @import "description/description.styl"
 @import "event/event.styl"
 @import "video/video.styl"
+@import "event_2/event_2.styl"
+@import "video_2/video_2.styl"
