--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -5,3 +5,5 @@ include main/main.pug
 include description/description.pug
 include event/event.pug
 include video/video.pug
+include event_2/event_2.pug
+include video_2/video_2.pug
