--- a/src/components/video_2/video_2.pug
+++ b/src/components/video_2/video_2.pug
@@ -1,15 +1,15 @@
-mixin video
+mixin video_2
 	div.video
 		span.video__category Видеолекция
-		h2.video__title Лобачевский, Льюис Кэррол и Клиффорд<br/>
-			span.video__title_author Валентина Кириченко
-		div.video__iframe(style="background-image: url('/images/Lobachevskiy-Kliffod/video_1.png')")
+		h2.video__title Понятие числа от Евдокса до Клиффорда<br/>
+			span.video__title_author Владлен Тиморин
+		div.video__iframe(style="background-image: url('/images/Lobachevskiy-Kliffod/video_2.png')")
 			div.video__iframe-logos
-				img.video__iframe-logos_postnauka(src="/images/Lobachevskiy-Kliffod/video-logo_1.png")
+				img.video__iframe-logos_postnauka(src="/images/Lobachevskiy-Kliffod/video-logo_2.png")
 				img.video__iframe-logos_bc(src="/images/bc-logo-white.png")
 			div.video__iframe-text
-				p.video__iframe-title Лобачевский, Льюис<br/>Кэррол и Клиффорд
-				p.video__iframe-author Валентина Кириченко
+				p.video__iframe-title Понятие числа<br/>от Евдокса<br/>до Клиффорда
+				p.video__iframe-author Владлен Тиморин
 			a.video__iframe-btn(href="#")
 		div.video__bottom
 			a.video__bottom-share(href="#") Отправьте видео другу
