--- a/src/pages/page.styl
+++ b/src/pages/page.styl
@@ -42,8 +42,8 @@ html
 //Стили контента
 .content
 	padding 64px 0 0
-	background url("/images/Lobachevskiy-Kliffod/bg_1.png") right 252px no-repeat, url("/images/Lobachevskiy-Kliffod/bg_2.png") right 1763px no-repeat, #D6D2CD
-	background-size 19%, 19%, auto
+	background url("/images/Lobachevskiy-Kliffod/bg_1.png") right 252px no-repeat, url("/images/Lobachevskiy-Kliffod/bg_2.png") left 1463px no-repeat, #D6D2CD
+	background-size 19%, 23%, auto
 	color #000
 	font-family "Cisco Sans"
 	&__nav-link
@@ -89,13 +89,14 @@ html
 
 .events
 	position relative
+	padding-bottom 145px
 	&::before
 		position absolute
 		top 46px
-		left 120px
+		left 123px
 		content ""
 		width 1px
-		height calc(100% - 783px)
+		height calc(100% - 840px)
 		background rgba(0,0,0,.1)
 
 
