--- a/src/components/nav/nav.pug
+++ b/src/components/nav/nav.pug
@@ -1,10 +1,8 @@
 mixin nav
     div.nav
-        div.nav__item
-            a.nav__link(href="#")
-                span.nav__text Посмотреть меню
-                p.nav__title Все<br/>встречи
-        div.nav__item
-            a.nav__link(href="#")
-                span.nav__text Читать дальше
-                p.nav__title Дарвин и<br/>Тимирязев
+        a.nav__item(href="#")
+            span.nav__text Посмотреть меню
+            p.nav__title Все<br/>встречи
+        a.nav__item(href="#")
+            span.nav__text.nav__text_orange Читать дальше
+            p.nav__title Дарвин и<br/>Тимирязев
