--- a/src/components/nav/nav.styl
+++ b/src/components/nav/nav.styl
@@ -2,12 +2,17 @@
 	display flex
 	background #010101
 	&__item
+		display block
 		width 50%
 		padding 84px 80px 104px
+		background-color #010101
+		transition .5s ease-in-out all
 		&:last-child
 			border-left 1px solid rgba(255,255,255,.3)
-	&__link
-		display block
+		&:hover
+			background-color #EB663A
+			.nav__text
+				color #fff
 	&__text
 		margin-bottom 16px
 		display inline-block
@@ -15,8 +20,8 @@
 		line-height 1.5
 		color rgba(255,255,255,.5)
 		font-family "Helios"
-		transition .25s ease-in-out color
-		&:hover
+		transition .5s ease-in-out all
+		&_orange
 			color #E34F2D
 	&__title
 		font-size 2.5rem
