--- a/src/components/fact/fact.styl
+++ b/src/components/fact/fact.styl
@@ -20,6 +20,9 @@
 			height 40px
 			border-radius 50%
 			background #fff
+			transition .5s ease-in-out all
+			&:hover
+				opacity .7
 			&::before,
 			&::after
 				display inline-block
