--- a/src/components/main/main.styl
+++ b/src/components/main/main.styl
@@ -68,6 +68,7 @@
 	&__container
 		height 100%
 	&__text-block
+		margin-top -20px
 		position relative
 		height calc(100% - 80px)
 		max-width 680px
@@ -76,7 +77,7 @@
 		justify-content center
 		padding-bottom 40px
 	&__title
-		margin-bottom 47px
+		margin-bottom 65px
 		font-size 5rem
 		line-height 1
 		font-family "Helios"
@@ -91,7 +92,7 @@
 			color rgba(255,255,255,.6)
 	&__read-more
 		position absolute
-		bottom 40px
+		bottom 15px
 		font-size 1rem
 		font-weight bold
 		letter-spacing .5px
