--- a/src/components/description/description.styl
+++ b/src/components/description/description.styl
@@ -5,6 +5,7 @@
 	color #fff
 	font-family "SangBleu Sunrise", sans-serif
 	&__container
+		padding-top 57px
 		height 100%
 		display flex
 		flex-direction column
@@ -17,7 +18,7 @@
 		line-height 1.5
 		letter-spacing 1px	
 		&:first-child
-			max-width 550px
+			max-width 530px
 		&:nth-last-child(2)
 			position relative
 			&::after
@@ -35,7 +36,8 @@
 			margin-bottom -15px
 			margin-right 18px
 			position relative
-			top -8px
+			top 3px
+			right -2px
 			font-size 4.375rem
 			line-height 1.17
 			font-family "Cisco Sans"
@@ -43,16 +45,16 @@
 		&_cursive
 			font-style italic
 	&__share
-		margin-top 24px
+		margin-top 28px
 		&-text
 			display block
-			margin-bottom 8px
+			margin-bottom 10px
 			font-size 1.25rem
 			font-family "Cisco Sans"
 			color rgba(255,255,255,.6)
 		&-links
 			display flex
-			width 164px
+			width 165px
 			justify-content space-between
 			align-items center
 			> a
