--- a/src/components/event_2/event_2.styl
+++ b/src/components/event_2/event_2.styl
@@ -1,20 +1,23 @@
 .event
 	position relative
-	margin 0 auto 64px
+	margin 0 auto 63px
 	width 770px
 	&__date
 		position absolute
 		top 0
-		left -124px
+		left -48px
+		transform translate(-100%)
 		font-size 1.5rem
 		line-height 1.5
 		font-family "Helios"
 		font-weight 900
 		color rgba(0,0,0,.5)
 		background #D6D2CD
-		padding-bottom 20px
+		padding-bottom 5px
+		@media only screen and (max-width 1199px)
+			left -30px
 	&__title
-		margin-bottom 16px
+		margin-bottom 23px
 		font-weight normal
 		font-size 1.5rem
 		line-height 1.5
@@ -23,4 +26,4 @@
 		font-size 1.125rem
 		line-height 1.5
 		p
-			margin-bottom 12px
+			margin-bottom 7px
