добавлен курсивный текст для переводов

--- a/src/components/event/event.pug
+++ b/src/components/event/event.pug
@@ -3,6 +3,16 @@ mixin event
 		span.event__date 1829
 		h2.event__title Первая публикация «О началах геометрии» Лобачевского
 		div.event__text
-			p Труд профессора, ректора Казанского университета Николая Лобачевского «О началах геометрии» был напечатан в журнале «Казанский вестник». Это первая в мире публикация по неевклидовой, или гиперболической, геометрии.
-			p В 1835-1838 Лобачевский публикует в журнале «Ученых записки» статьи о «воображаемой геометрии», а затем вышла наиболее полная из его работ «Новые начала геометрии с полной теорией параллельных».
-			p В 1837 году статья Лобачевского «Воображаемая геометрия» на французском языке появилась в берлинском «Crelles Journal», которое издавал математик Август Леопольд Крелле. В 1840 году Лобачевский опубликовал на немецком языке книгу «Геометрические исследования по теории параллельных».
+			p Труд профессора, ректора Казанского университета Николая Лобачевского «О началах геометрии» был напечатан в журнале 
+				span.event__text_cursive «Казанский вестник». 
+				span Это первая в мире публикация по неевклидовой, или гиперболической, геометрии.
+			p В 1835-1838 Лобачевский публикует в журнале 
+				span.event__text_cursive «Ученые записки» 
+				span статьи о «воображаемой геометрии», а затем вышла наиболее полная из его работ 
+				span.event__text_cursive «Новые начала геометрии с полной теорией параллельных».
+			p В 1837 году статья Лобачевского 
+				span.event__text_cursive «Воображаемая геометрия» 
+				span на французском языке появилась в берлинском 
+				span.event__text_cursive «Crelles Journal»
+				span , которое издавал математик Август Леопольд Крелле. В 1840 году Лобачевский опубликовал на немецком языке книгу 
+				span.event__text_cursive «Геометрические исследования по теории параллельных».
