--- a/src/components/event_2/event_2.styl
+++ b/src/components/event_2/event_2.styl
@@ -25,5 +25,8 @@
 	&__text
 		font-size 1.125rem
 		line-height 1.5
+		&_cursive
+			font-family "SangBleu Sunrise"
+			font-style italic
 		p
 			margin-bottom 7px
