--- a/src/components/event_3/event_3.styl
+++ b/src/components/event_3/event_3.styl
@@ -22,6 +22,17 @@
 		font-size 1.5rem
 		line-height 1.5
 		font-family "Helios"
+	&__img
+		display flex
+		justify-content center
+		align-items center
+		margin-bottom 22px
+		height 339px
+		border-radius 4px
+		box-shadow 0 2px 3px rgba(0,0,0,0.1)
+		background #fff
+		background-repeat no-repeat
+		background-position right top
 	&__text
 		font-size 1.125rem
 		line-height 1.5
