--- a/src/pages/page.styl
+++ b/src/pages/page.styl
@@ -49,6 +49,9 @@ html
 	@media only screen and (max-width 1199px)
 		background url("/images/Lobachevskiy-Kliffod/bg_1.png") right 330px no-repeat, url("/images/Lobachevskiy-Kliffod/bg_2.png") left 1720px no-repeat, #d6d2cd
 		background-size 16%, 20%, auto
+	&_2
+		background url("/images/Darvin-Timiryazev/bg_1.png") left 130px no-repeat, url("/images/Darvin-Timiryazev/bg_2.png") right 2175px no-repeat, url("/images/Darvin-Timiryazev/bg_3.png") left 3676px no-repeat, #d6d2cd
+		background-size 16%, 20%, 18%, auto
 	&__nav-link
 		position fixed
 		right 36px
