--- a/src/components/event_2/event_2.pug
+++ b/src/components/event_2/event_2.pug
@@ -3,4 +3,6 @@ mixin event_2
 		span.event__date 1829
 		h2.event__title Под влиянием Лобачевского Уильям Клиффорд пишет «О пространственной теории материи»
 		div.event__text
-			p Британский математик Уильям Кингдон Клиффорд назвал Лобачевского «Коперником геометрии». Под влиянием неевклидовой геометрии Римана и Лобачевского Клиффорд написал свою работу On the space-theory of matter («О пространственной теории материи», опубликована в 1876 году). В ней он предположил, что материя и тяготение  — это проявление искривления пространства-времени, особенности пространственной геометрии. Эта идея впоследствии легла в основу теории относительности Альберта Эйнштейна.
+			p Британский математик Уильям Кингдон Клиффорд назвал Лобачевского «Коперником геометрии». Под влиянием неевклидовой геометрии Римана и Лобачевского Клиффорд написал свою работу On the space-theory of matter (
+				span.event__text_cursive «О пространственной теории материи»
+				span , опубликована в 1876 году). В ней он предположил, что материя и тяготение  — это проявление искривления пространства-времени, особенности пространственной геометрии. Эта идея впоследствии легла в основу теории относительности Альберта Эйнштейна.
