--- a/src/components/fact/fact.pug
+++ b/src/components/fact/fact.pug
@@ -9,4 +9,9 @@ mixin fact
                     span.fact__date 1886—<br/>1917
                     h2.fact__title Петр Кропоткин живет в Лондоне
                     div.fact__text
-                        p После освобождения из-под ареста во Франции Кропоткин с семьей переезжает в Англию. В Лондоне он продолжает сотрудничать с Британской энциклопедией и Энциклопедией Чемберса, в которых публикует свои статьи по истории и географии России. Несмотря на то, что на протяжении всего своего пребывания в Англии Кропоткин ведет политическую и пропагандистскую деятельность, он не забывает о науке. Именно в Лондоне он пишет свои важнейшие труды вроде “Хлеб и Воля” (1892), “Записки революционера” (1902) и “Взаимная помощь как фактор эволюции” (1902).
+                        p После освобождения из-под ареста во Франции Кропоткин с семьей переезжает в Англию. В Лондоне он продолжает сотрудничать с Британской энциклопедией и Энциклопедией Чемберса, в которых публикует свои статьи по истории и географии России. Несмотря на то, что на протяжении всего своего пребывания в Англии Кропоткин ведет политическую и пропагандистскую деятельность, он не забывает о науке. Именно в Лондоне он пишет свои важнейшие труды вроде 
+                            span.fact__text_cursive “Хлеб и Воля” (1892)
+                            span , 
+                            span.fact__text_cursive “Записки революционера” (1902) 
+                            span и 
+                            span.fact__text_cursive “Взаимная помощь как фактор эволюции” (1902).
