--- a/src/components/fact/fact.styl
+++ b/src/components/fact/fact.styl
@@ -79,5 +79,8 @@
 	&__text
 		font-size 1.5rem
 		line-height 1.5
+		&_cursive
+			font-family "SangBleu Sunrise"
+			font-style italic
 		p
 			margin-bottom 12px
