--- a/src/components/video/video.styl
+++ b/src/components/video/video.styl
@@ -5,7 +5,7 @@
 	padding-top 25px
 	background #FFFFFF
 	border-radius 4px
-	box-shadow 0 4px 6px rgba(0, 0, 0, 0.05)
+	box-shadow 0 2px 3px rgba(0,0,0,0.1)
 	&::before
 		position absolute
 		left -102px
