--- a/src/components/index.pug
+++ b/src/components/index.pug
@@ -1,12 +1,15 @@
 include header/header.pug
 include footer/footer.pug
 include lecture_preview/lecture_preview.pug
-include main/main.pug
-include description/description.pug
-include event/event.pug
-include video/video.pug
+include start/start.pug
+include about/about.pug
+include event_1/event_1.pug
+include video_1/video_1.pug
 include event_2/event_2.pug
 include video_2/video_2.pug
-include fact/fact.pug
-include nav/nav.pug
+include fact_1/fact_1.pug
+include nav_1/nav_1.pug
 include event_3/event_3.pug
+include video_3/video_3.pug
+include event_4/event_4.pug
+include quote_1/quote_1.pug
