--- a/src/components/index.styl
+++ b/src/components/index.styl
@@ -1,12 +1,15 @@
 @import "footer/footer.styl"
 @import "header/header.styl"
 @import "lecture_preview/lecture_preview.styl"
-@import "main/main.styl"
-@import "description/description.styl"
-@import "event/event.styl"
-@import "video/video.styl"
+@import "start/start.styl"
+@import "about/about.styl"
+@import "event_1/event_1.styl"
+@import "video_1/video_1.styl"
 @import "event_2/event_2.styl"
 @import "video_2/video_2.styl"
-@import "fact/fact.styl"
-@import "nav/nav.styl"
+@import "fact_1/fact_1.styl"
+@import "nav_1/nav_1.styl"
 @import "event_3/event_3.styl"
+@import "video_3/video_3.styl"
+@import "event_4/event_4.styl"
+@import "quote_1/quote_1.styl"
