--- a/src/pages/page.pug
+++ b/src/pages/page.pug
@@ -11,8 +11,8 @@ html.ua(lang="ru")
 		+header
 		//- Страница 1
 		div.wrapper
-			+main
-			+description
+			+start
+			+about
 			div.content
 				a.content__nav-link(href="#")
 					span.content__nav-link_text Все<br/>встречи
@@ -20,12 +20,12 @@ html.ua(lang="ru")
 				div.container.content__container
 					h1.content__title Лобачевский и<br/>Клиффорд
 					div.events
-						+event
-						+video
+						+event_1
+						+video_1
 						+event_2
 						+video_2
-			+fact
-			+nav
+			+fact_1
+			+nav_1
 
 		//- Страница 2
 		div.wrapper
@@ -37,5 +37,8 @@ html.ua(lang="ru")
 					h1.content__title Дарвин и<br/>Тимирязев
 					div.events
 						+event_3
+						+video_3
+						+event_4
+						+quote_1
 
 		+footer
