--- a/src/components/quote_1/quote_1.styl
+++ b/src/components/quote_1/quote_1.styl
@@ -9,11 +9,11 @@
 	font-family "Cisco Sans", sans-serif
 	&::before
 		position absolute
-		left -82px
-		top -13px
+		left -91px
+		top -5px
 		content ""
 		width 32px
-		height 32px
+		height 34px
 		border 10px solid #D6D2CD
 		border-top-width 3px
 		background url("/images/quote.png") center center no-repeat, #D6D2CD
@@ -31,11 +31,17 @@
 			border-radius 50%
 		&_text
 			position relative
-			top -20px
+			top -16px
 	&__text
-		margin-bottom 12px
+		margin-bottom 9px
 		font-size 1.25rem
 		line-height 1.6
+		&_big
+			margin-top -13px
+			margin-bottom 6px
+			font-size 1.5rem
+			line-height 1.5
+			font-family "Helios"
 	&__cite
 		color rgba(0,0,0,.6)
 		font-size 1rem
